make chart not flow off screen. Fix reversal of realized & unrealized

--- a/src/modules/portfolio/components/performance-graph/performance-graph.styles.less
+++ b/src/modules/portfolio/components/performance-graph/performance-graph.styles.less
@@ -4,6 +4,7 @@
   :global {
     .highcharts-container {
       min-width: 100%;
+      max-width: 100%;
       position: relative;
       top: -0.65rem;
 
